--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "sasha jump "
+  command = "gatsby build "
   functions = "netlify/functions"
   publish = "public"
 
