--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-sharp": "^5.0.0",
     "netlify": "^13.0.1",
     "netlify-cms-app": "^2.15.72",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.6",
